--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>docker-spring-boot</finalName>
     </build>
 
 </project>
